# song_recommender_system

./: Makefile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 11413c348ca0_create_streaming_table.py  17cfdf6a5407_add_summary_embedding_column_to_.py  9c41fc3805b0_create_episodes_table.py
src/database/: utils.py
src/models/: embeddings.py  episode_preprocessing.py  feature_preprocessing.py  towers.py  train.py
src/two_tower_podcast.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
two_tower_podcast.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
